  - Handle 0 byte line by switching freq in STE mode
- CPU changes :
  - Fix a case when MFP's interrupt happens during the IACK sequence for HBL/VBL

Emulator:
- SDL GUI:
  - Update clock speed in the status bar when changing bus speed
    in Falcon mode
- Debugger:
  - "CpuInstr" and "DspInstr" variables for count of instructions
    executed since emulation was last continued from debugger.
  - Address space in 'dm' command can be given like in DSP disassembly,
    "dm x:$100", in addition to earlier "dm x $100".

Fixed demos :
  Shforstv.exe by Paulo Simoes (video, did not work in STE mode)
  Sommarhack 2011 Invitro by DHS (CPU/MFP, top border not removed)


 Version 1.7.0 (2013-06-24):
 ---------------------------

Emulation:
- TT video emulation :
  - Extend the ST palette registers from 9bit to 12bit for ST modes
  - Duochrome mode instead of monochrome for ST High
  - Implementation of SampleHold in TT Hypermono video mode
- Sound changes :
  - Better model of the YM2149 noise generation (no noticeable audible impact)
  - Slightly better volume table (measured by Paulo Simoes on a real ST)
- CPU changes :
  - Added experimental MMU emulation for the 68030 mode
  - Handle the IACK cycles during an exception for HBL/VBL
- ACIA/IKBD changes :
  - Full implementation of the MC6850 ACIA, giving much more robust
    IKBD emulation
  - Better timings for all IKBD commands (measured on a real STF)
  - Clock is handled internally in IKBD, host date/time is used
    only to initialize RTC at boot.  I.e. pausing emulation doesn't
    cause time skips when unpausing
  - Fix slow mouse when absolute mode is used with scale values
- MFP changes :
  - Fixed priority errors when simultaneous interrupts happened
  - MFP's IRQ should be delayed by 4 cycles before reaching the CPU
  - MFP's IRQ signal was not correctly updated in some cases
  - Handle the IACK cycles between CPU and MFP during an exception
- FDC changes :
  - Better delays for all the GAPs inside a track